Init config, file for back test marubozu

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /PingKeeper/.vs
 /PingKeeper/PingKeeper/bin
 /PingKeeper/PingKeeper/obj
+/.vs/Net8.PingKeeper/v17/.wsuo
+/.vs/Net8.PingKeeper/v17/DocumentLayout.json
+/.vs/VSWorkspaceState.json
